Non-functional change: fix warning by using Integer.valueOf(i) instead of new Integer(i)